--- a/index.html
+++ b/index.html
@@ -5,85 +5,119 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FreJun API & SDK Documentation</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
+  <script src="https://unpkg.com/flowbite@1.4.1/dist/flowbite.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@headlessui/react@latest/dist/headlessui.umd.js"></script>
+  <script src="https://unpkg.com/alpinejs" defer></script>
+  <style>
+    [x-cloak] { display: none; }
+  </style>
 </head>
 <body class="bg-gray-50 text-gray-800">
+
+  <!-- Navigation Bar -->
+  <nav class="bg-white shadow sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
+      <h1 class="text-xl font-bold">FreJun Docs</h1>
+      <div class="space-x-4">
+        <a href="#quick-start" class="text-gray-600 hover:text-blue-600">Quick Start</a>
+        <a href="#developer-guides" class="text-gray-600 hover:text-blue-600">Guides</a>
+        <a href="#api-reference" class="text-gray-600 hover:text-blue-600">API</a>
+        <a href="https://github.com/FreJun" class="text-gray-600 hover:text-blue-600">GitHub</a>
+        <a href="#support" class="text-gray-600 hover:text-blue-600">Support</a>
+      </div>
+    </div>
+  </nav>
+
   <!-- Hero Section -->
-  <section class="text-center py-16 px-6 bg-white shadow">
-    <h1 class="text-4xl font-bold mb-4">FreJun API & SDK Documentation</h1>
-    <p class="max-w-2xl mx-auto text-lg mb-6">
-      Build, test, and deploy enterprise-grade voice communication. Our comprehensive guides, REST API reference, and official SDKs provide everything you need to embed scalable calling capabilities into your application. Authenticate, make your first API call, and start streaming call data in minutes.
-    </p>
-    <a href="#api-reference" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">Explore API Reference</a>
+  <section class="text-center py-24 px-6 bg-gradient-to-br from-blue-600 to-purple-700 text-white" x-data="{ show: false }" x-init="show = true">
+    <div x-show="show" x-transition.duration.1000ms>
+      <h1 class="text-5xl font-extrabold mb-4">FreJun API & SDK Documentation</h1>
+      <p class="max-w-2xl mx-auto text-lg mb-6">
+        Build, test, and deploy enterprise-grade voice communication. Our comprehensive guides, REST API reference, and official SDKs provide everything you need to embed scalable calling capabilities into your application.
+      </p>
+      <a href="#api-reference" class="bg-white text-blue-600 font-semibold px-6 py-3 rounded hover:bg-gray-200 transition">Explore API Reference</a>
+    </div>
   </section>
 
   <!-- Quick Start Section -->
-  <section class="py-16 px-6">
-    <h2 class="text-3xl font-semibold text-center mb-4">Start Building in 5 Minutes</h2>
-    <p class="text-center max-w-xl mx-auto mb-6">
-      Follow this guide for a fast-track integration. We'll walk you through authenticating with your API key, installing the SDK for your preferred stack, making your first outbound call via our API, and setting up webhooks to receive real-time call status updates directly in your system.
-    </p>
-    <div class="text-center">
-      <a href="#quick-start" class="bg-blue-500 text-white px-5 py-2 rounded hover:bg-blue-600">Go to Quick Start Guide</a>
+  <section class="py-20 px-6" id="quick-start">
+    <div class="max-w-5xl mx-auto text-center" x-data="{ show: false }" x-intersect.once="show = true">
+      <div x-show="show" x-transition>
+        <h2 class="text-3xl font-bold mb-4">Start Building in 5 Minutes</h2>
+        <p class="text-lg max-w-2xl mx-auto mb-6">
+          Follow this guide for a fast-track integration. We'll walk you through authenticating with your API key, installing the SDK for your preferred stack, and making your first outbound call.
+        </p>
+        <a href="#" class="bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700 transition">Go to Quick Start Guide</a>
+      </div>
     </div>
   </section>
 
   <!-- Developer Guides Section -->
-  <section class="bg-gray-100 py-16 px-6">
-    <h2 class="text-3xl font-semibold text-center mb-4">In-Depth Developer Guides</h2>
-    <p class="text-center max-w-xl mx-auto mb-6">
-      Go beyond the basics. Our detailed guides cover core architectural concepts, from managing the entire call lifecycle and fetching comprehensive call analytics to implementing best practices for error handling and security. These resources help you build a robust, scalable, and secure integration that meets stringent enterprise requirements.
-    </p>
-    <div class="text-center">
-      <a href="#developer-guides" class="bg-blue-500 text-white px-5 py-2 rounded hover:bg-blue-600">Read the Guides</a>
+  <section class="bg-gray-100 py-20 px-6" id="developer-guides">
+    <div class="max-w-5xl mx-auto text-center" x-data="{ show: false }" x-intersect.once="show = true">
+      <div x-show="show" x-transition>
+        <h2 class="text-3xl font-bold mb-4">In-Depth Developer Guides</h2>
+        <p class="text-lg max-w-2xl mx-auto mb-6">
+          Go beyond the basics. Learn architectural concepts, call lifecycle handling, analytics, error management, and enterprise-grade security practices.
+        </p>
+        <a href="#" class="bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700 transition">Read the Guides</a>
+      </div>
     </div>
   </section>
 
   <!-- API Reference Section -->
-  <section class="py-16 px-6">
-    <h2 class="text-3xl font-semibold text-center mb-4">Interactive API Reference</h2>
-    <p class="text-center max-w-xl mx-auto mb-6">
-      Explore every endpoint in our REST API. Our interactive reference provides detailed information on all available resources, parameters, request/response examples, and error codes. Test API calls directly from your browser to understand the functionality before writing a single line of code. Essential for any hands-on developer.
-    </p>
-    <div class="text-center">
-      <a href="#api-reference" class="bg-blue-500 text-white px-5 py-2 rounded hover:bg-blue-600">Launch API Reference</a>
+  <section class="py-20 px-6" id="api-reference">
+    <div class="max-w-5xl mx-auto text-center" x-data="{ show: false }" x-intersect.once="show = true">
+      <div x-show="show" x-transition>
+        <h2 class="text-3xl font-bold mb-4">Interactive API Reference</h2>
+        <p class="text-lg max-w-2xl mx-auto mb-6">
+          Explore all endpoints with examples, error codes, and test requests right from the browser.
+        </p>
+        <a href="#" class="bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700 transition">Launch API Reference</a>
+      </div>
     </div>
   </section>
 
   <!-- SDKs Section -->
-  <section class="bg-gray-100 py-16 px-6">
-    <h2 class="text-3xl font-semibold text-center mb-4">Official SDKs and Libraries</h2>
-    <p class="text-center max-w-xl mx-auto mb-6">
-      Accelerate your development cycle with our official SDKs. These libraries provide a convenient wrapper around our REST API, handling authentication, request signing, and data serialization for you. This reduces boilerplate code and potential errors, letting you focus on application logic. Available for Node.js, Python, and Java.
-    </p>
-    <div class="text-center">
-      <a href="https://github.com/FreJun" class="bg-blue-500 text-white px-5 py-2 rounded hover:bg-blue-600">View SDKs on GitHub</a>
+  <section class="bg-gray-100 py-20 px-6">
+    <div class="max-w-5xl mx-auto text-center" x-data="{ show: false }" x-intersect.once="show = true">
+      <div x-show="show" x-transition>
+        <h2 class="text-3xl font-bold mb-4">Official SDKs and Libraries</h2>
+        <p class="text-lg max-w-2xl mx-auto mb-6">
+          Use our Node.js, Python, and Java SDKs to abstract boilerplate code and accelerate integration.
+        </p>
+        <a href="https://github.com/FreJun" class="bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700 transition">View SDKs on GitHub</a>
+      </div>
     </div>
   </section>
 
   <!-- Support Section -->
-  <section class="py-16 px-6">
-    <h2 class="text-3xl font-semibold text-center mb-4">Developer Support & Resources</h2>
-    <p class="text-center max-w-xl mx-auto mb-6">
-      Encountering a technical challenge or have a question about implementation? Our developer support team is ready to assist. Browse our community forums for answers or contact us directly for dedicated support. We are committed to ensuring your integration process is seamless and successful.
-    </p>
-    <div class="text-center">
-      <a href="mailto:support@frejun.com" class="bg-blue-500 text-white px-5 py-2 rounded hover:bg-blue-600">Contact Support</a>
+  <section class="py-20 px-6" id="support">
+    <div class="max-w-5xl mx-auto text-center" x-data="{ show: false }" x-intersect.once="show = true">
+      <div x-show="show" x-transition>
+        <h2 class="text-3xl font-bold mb-4">Developer Support & Resources</h2>
+        <p class="text-lg max-w-2xl mx-auto mb-6">
+          Stuck or need help? Check our community forum or reach out for direct support.
+        </p>
+        <a href="mailto:support@frejun.com" class="bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700 transition">Contact Support</a>
+      </div>
     </div>
   </section>
 
   <!-- Testimonials Section -->
-  <section class="bg-white py-16 px-6">
-    <h2 class="text-3xl font-semibold text-center mb-10">What Our Customers Say</h2>
-    <div class="max-w-4xl mx-auto grid gap-10 md:grid-cols-2">
-      <div class="bg-gray-50 p-6 rounded shadow">
-        <p class="italic">"Integrating FreJun's API was seamless. Their documentation made our setup faster and smoother than expected."
-        </p>
-        <p class="mt-4 font-semibold">— Priya Sharma, CTO, CallConnect</p>
-      </div>
-      <div class="bg-gray-50 p-6 rounded shadow">
-        <p class="italic">"The SDKs are well-structured and the support team is incredibly responsive. We've built a robust call system in no time."
-        </p>
-        <p class="mt-4 font-semibold">— Ankit Mehta, Engineering Lead, BizVoice</p>
+  <section class="bg-white py-20 px-6">
+    <div class="max-w-5xl mx-auto text-center">
+      <h2 class="text-3xl font-bold mb-10">What Our Customers Say</h2>
+      <div class="grid gap-10 md:grid-cols-2">
+        <div class="bg-gray-100 p-6 rounded shadow transition-transform transform hover:scale-105">
+          <p class="italic">"Integrating FreJun's API was seamless. Their documentation made our setup faster and smoother than expected."</p>
+          <p class="mt-4 font-semibold">— Priya Sharma, CTO, CallConnect</p>
+        </div>
+        <div class="bg-gray-100 p-6 rounded shadow transition-transform transform hover:scale-105">
+          <p class="italic">"The SDKs are well-structured and the support team is incredibly responsive. We've built a robust call system in no time."</p>
+          <p class="mt-4 font-semibold">— Ankit Mehta, Engineering Lead, BizVoice</p>
+        </div>
       </div>
     </div>
   </section>
