--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-xl font-bold">FreJun Docs</h1>
       <div class="space-x-4">
-        <a href="#quick-start" class="text-gray-600 hover:text-blue-600">Quick Start</a>
-        <a href="#developer-guides" class="text-gray-600 hover:text-blue-600">Guides</a>
-        <a href="#api-reference" class="text-gray-600 hover:text-blue-600">API</a>
-        <a href="https://github.com/FreJun" class="text-gray-600 hover:text-blue-600">GitHub</a>
-        <a href="#support" class="text-gray-600 hover:text-blue-600">Support</a>
+        <a href="#quick-start" class="text-gray-600 hover:text-[#EF4C23]">Quick Start</a>
+        <a href="#developer-guides" class="text-gray-600 hover:text-[#EF4C23]">Guides</a>
+        <a href="#api-reference" class="text-gray-600 hover:text-[#EF4C23]">API</a>
+        <a href="https://github.com/FreJun" class="text-gray-600 hover:text-[#EF4C23]">GitHub</a>
+        <a href="#support" class="text-gray-600 hover:text-[#EF4C23]">Support</a>
       </div>
     </div>
   </nav>
 
   <!-- Hero Section -->
-  <section class="text-center py-24 px-6 bg-gradient-to-br from-blue-600 to-purple-700 text-white" x-data="{ show: false }" x-init="show = true">
+  <section class="text-center py-24 px-6 bg-gradient-to-br from-[#EF4C23] to-[#FB774C] text-white" x-data="{ show: false }" x-init="show = true">
     <div x-show="show" x-transition.duration.1000ms>
       <h1 class="text-5xl font-extrabold mb-4">FreJun API & SDK Documentation</h1>
       <p class="max-w-2xl mx-auto text-lg mb-6">
         Build, test, and deploy enterprise-grade voice communication. Our comprehensive guides, REST API reference, and official SDKs provide everything you need to embed scalable calling capabilities into your application.
       </p>
-      <a href="#api-reference" class="bg-white text-blue-600 font-semibold px-6 py-3 rounded hover:bg-gray-200 transition">Explore API Reference</a>
+      <a href="#api-reference" class="bg-white text-[#EF4C23] font-semibold px-6 py-3 rounded hover:bg-gray-200 transition">Explore API Reference</a>
     </div>
   </section>
 
@@ -46,9 +46,9 @@
       <div x-show="show" x-transition>
         <h2 class="text-3xl font-bold mb-4">Start Building in 5 Minutes</h2>
         <p class="text-lg max-w-2xl mx-auto mb-6">
-          Follow this guide for a fast-track integration. We'll walk you through authenticating with your API key, installing the SDK for your preferred stack, and making your first outbound call.
+          Follow this guide for a fast-track integration. We'll walk you through authenticating with your API key, installing the SDK for your preferred stack, making your first outbound call via our API, and setting up webhooks to receive real-time call status updates directly in your system.
         </p>
-        <a href="#" class="bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700 transition">Go to Quick Start Guide</a>
+        <a href="https://frejun.com/docs/quickstart" class="bg-[#EF4C23] text-white px-5 py-2 rounded hover:bg-[#e0431c] transition">Go to Quick Start Guide</a>
       </div>
     </div>
   </section>
@@ -59,9 +59,9 @@
       <div x-show="show" x-transition>
         <h2 class="text-3xl font-bold mb-4">In-Depth Developer Guides</h2>
         <p class="text-lg max-w-2xl mx-auto mb-6">
-          Go beyond the basics. Learn architectural concepts, call lifecycle handling, analytics, error management, and enterprise-grade security practices.
+          Go beyond the basics. Our detailed guides cover core architectural concepts, from managing the entire call lifecycle and fetching comprehensive call analytics to implementing best practices for error handling and security.
         </p>
-        <a href="#" class="bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700 transition">Read the Guides</a>
+        <a href="https://frejun.com/docs/guides" class="bg-[#EF4C23] text-white px-5 py-2 rounded hover:bg-[#e0431c] transition">Read the Guides</a>
       </div>
     </div>
   </section>
@@ -72,9 +72,9 @@
       <div x-show="show" x-transition>
         <h2 class="text-3xl font-bold mb-4">Interactive API Reference</h2>
         <p class="text-lg max-w-2xl mx-auto mb-6">
-          Explore all endpoints with examples, error codes, and test requests right from the browser.
+          Explore every endpoint in our REST API. Our interactive reference provides detailed information on all available resources, parameters, request/response examples, and error codes.
         </p>
-        <a href="#" class="bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700 transition">Launch API Reference</a>
+        <a href="https://frejun.com/docs/reference" class="bg-[#EF4C23] text-white px-5 py-2 rounded hover:bg-[#e0431c] transition">Launch API Reference</a>
       </div>
     </div>
   </section>
@@ -85,9 +85,9 @@
       <div x-show="show" x-transition>
         <h2 class="text-3xl font-bold mb-4">Official SDKs and Libraries</h2>
         <p class="text-lg max-w-2xl mx-auto mb-6">
-          Use our Node.js, Python, and Java SDKs to abstract boilerplate code and accelerate integration.
+          Accelerate your development cycle with our official SDKs. These libraries provide a convenient wrapper around our REST API, handling authentication, request signing, and data serialization for you.
         </p>
-        <a href="https://github.com/FreJun" class="bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700 transition">View SDKs on GitHub</a>
+        <a href="https://github.com/FreJun" class="bg-[#EF4C23] text-white px-5 py-2 rounded hover:bg-[#e0431c] transition">View SDKs on GitHub</a>
       </div>
     </div>
   </section>
@@ -98,9 +98,9 @@
       <div x-show="show" x-transition>
         <h2 class="text-3xl font-bold mb-4">Developer Support & Resources</h2>
         <p class="text-lg max-w-2xl mx-auto mb-6">
-          Stuck or need help? Check our community forum or reach out for direct support.
+          Encountering a technical challenge or have a question about implementation? Our developer support team is ready to assist.
         </p>
-        <a href="mailto:support@frejun.com" class="bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700 transition">Contact Support</a>
+        <a href="mailto:support@frejun.com" class="bg-[#EF4C23] text-white px-5 py-2 rounded hover:bg-[#e0431c] transition">Contact Support</a>
       </div>
     </div>
   </section>
